@@ -65,7 +65,6 @@ void drawRect(RGFW_window* win, RGFW_rect r, u8 color[4]) {
 
 int main(void) {
     RGFW_window* win = RGFW_createWindow("Basic buffer example", RGFW_RECT(0, 0, 500, 500), RGFW_windowCenter | RGFW_windowTransparent);
-    RGFW_window_initBuffer(win);
     
     screenSize = RGFW_getScreenSize();
     
